------------------------------------------------------------------------------
  pracma                                                                NEWS
------------------------------------------------------------------------------


PLANNED FOR NEXT VERSIONS

    o [tbd.]

CHANGES IN VERSION 0.9.5 (2012-01-09)

    o kmeanspp() kmeans++ clustering algorithm.

CHANGES IN VERSION 0.9.4 (2012-01-08)

    o DSCsearch() Davies-Swann-Campey search in one dimension.
    o Improved modpower() through modular exponentiation.
      added lehmann_test() Lehmann's primality test as example.
    o Corrected polar() and andrewsplot().

CHANGES IN VERSION 0.9.3 (2011-12-27)

    o direct1d() one-dimensional version of the DIRECT algorithm for
      global function minimization.

CHANGES IN VERSION 0.9.2 (2011-12-26)

    o ApEn() approximate entropy of a time series.
    o circshift() circularly shifting arrays (Matlab Style).
    o interv_union(), interv_intersect() union and intersection
      of a set of (closed) intervals.

CHANGES IN VERSION 0.9.1 (2011-12-12)

    o plotyy() plots curves with y-axes on both left and right side.
    o fplot() plots components of a multivariate function.

CHANGES IN VERSION 0.9.0 (2011-12-11)

    o errorbar() routine for plotting error bars in both directions.
    o whittaker() Whittaker-Henderson smoothing  ** Not yet running** .
    o rref() reduced row echelon form.

CHANGES IN VERSION 0.8.9 (2011-12-08)

    o cutpoints() automatically finds cutting points based on gaps.
    o hausdorff_dist calculates the Hausdorff distance / Hausdorff dimension.
    o nnz() number of non-zeros elements (Matlab style).

CHANGES IN VERSION 0.8.8 (2011-12-06)

    o polar() for polar plots (Matlab style), see the example plots.
    o andrewsplot() plots Andrews curves in polar coordinates.
    o Vectorized: cart2sph(), sph2cart(), cart2pol(), pol2cart().

CHANGES IN VERSION 0.8.7 (2011-11-30)

    o deg2rad(), rad2deg()